; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_jfs.c_grub_jfs_blkno.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_jfs.c_grub_jfs_blkno.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_jfs_data = type { i32 }
%struct.grub_jfs_inode = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32*, i32 }
%struct.getblk_closure = type { i32, %struct.grub_jfs_data* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grub_jfs_data*, %struct.grub_jfs_inode*, i32)* @grub_jfs_blkno to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_jfs_blkno(%struct.grub_jfs_data* %0, %struct.grub_jfs_inode* %1, i32 %2) #0 {
  %4 = alloca %struct.grub_jfs_data*, align 8
  %5 = alloca %struct.grub_jfs_inode*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.getblk_closure, align 8
  store %struct.grub_jfs_data* %0, %struct.grub_jfs_data** %4, align 8
  store %struct.grub_jfs_inode* %1, %struct.grub_jfs_inode** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.grub_jfs_data*, %struct.grub_jfs_data** %4, align 8
  %9 = getelementptr inbounds %struct.getblk_closure, %struct.getblk_closure* %7, i32 0, i32 1
  store %struct.grub_jfs_data* %8, %struct.grub_jfs_data** %9, align 8
  %10 = load i32, i32* %6, align 4
  %11 = getelementptr inbounds %struct.getblk_closure, %struct.getblk_closure* %7, i32 0, i32 0
  store i32 %10, i32* %11, align 8
  %12 = load %struct.grub_jfs_inode*, %struct.grub_jfs_inode** %5, align 8
  %13 = getelementptr inbounds %struct.grub_jfs_inode, %struct.grub_jfs_inode* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 1
  %15 = load %struct.grub_jfs_inode*, %struct.grub_jfs_inode** %5, align 8
  %16 = getelementptr inbounds %struct.grub_jfs_inode, %struct.grub_jfs_inode* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  %20 = call i32 @getblk(i32* %14, i32* %19, %struct.getblk_closure* %7)
  ret i32 %20
}

declare dso_local i32 @getblk(i32*, i32*, %struct.getblk_closure*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
